--- a/contacto.html
+++ b/contacto.html
@@ -31,7 +31,7 @@
             <li><a href="comunidad.html" data-i18n="nav_community">Comunidad</a></li>
             <li><a href="contacto.html" class="active" data-i18n="nav_contact">Contacto</a></li>
             <li>
-                <select name="idioma" id="idioma">
+                <select name="idioma" id="idiomaHeader">
                     <option value="es">🇪🇸 Español</option>
                     <option value="en">🇬🇧 English</option>
                 </select>
@@ -78,7 +78,7 @@
             <button id="closeProfile" class="close-popup-btn">
                 <i class="fas fa-times"></i>
             </button>
-            <h2>Mi Perfil</h2>
+            <h2 data-i18n="profile_title">Mi Perfil</h2>
             <div class="profile-form-wrapper">
                 <form id="profileForm" class="profile-form">
                     <div class="profile-photo-section">
@@ -86,42 +86,42 @@
                             <img id="profilePhotoPreview" src="img/default.png" alt="Foto de perfil">
                         </div>
                         <div class="profile-photo-input">
-                            <label for="profilePhoto">Cambiar foto</label>
+                            <label for="profilePhoto" data-i18n="profile_photo_change">Cambiar foto</label>
                             <input type="file" id="profilePhoto" accept="image/*" style="display:none;">
                         </div>
                     </div>
 
                     <div class="profile-field">
-                        <label for="profileNombre">Nombre</label>
-                        <input type="text" id="profileNombre" placeholder="Tu nombre" readonly>
+                        <label for="profileNombre" data-i18n="profile_name_label">Nombre</label>
+                        <input type="text" id="profileNombre" data-i18n-placeholder="profile_name_placeholder" placeholder="Tu nombre" readonly>
                     </div>
 
                     <div class="profile-field">
-                        <label for="profileApellido">Apellido</label>
-                        <input type="text" id="profileApellido" placeholder="Tu apellido" readonly>
+                        <label for="profileApellido" data-i18n="profile_lastname_label">Apellido</label>
+                        <input type="text" id="profileApellido" data-i18n-placeholder="profile_lastname_placeholder" placeholder="Tu apellido" readonly>
                     </div>
 
                     <div class="profile-field">
-                        <label for="profileEmail">Email</label>
-                        <input type="email" id="profileEmail" placeholder="tu@email.com" readonly>
+                        <label for="profileEmail" data-i18n="profile_email_label">Email</label>
+                        <input type="email" id="profileEmail" data-i18n-placeholder="profile_email_placeholder" placeholder="tu@email.com" readonly>
                     </div>
 
                     <div class="profile-field">
-                        <label for="profileUsername">Nombre de Usuario</label>
-                        <input type="text" id="profileUsername" placeholder="Tu usuario" readonly>
+                        <label for="profileUsername" data-i18n="profile_username_label">Nombre de Usuario</label>
+                        <input type="text" id="profileUsername" data-i18n-placeholder="profile_username_placeholder" placeholder="Tu usuario" readonly>
                     </div>
 
                     <div class="profile-field">
-                        <label for="profilePassword">Cambiar contraseña (opcional)</label>
-                        <input type="password" id="profilePassword" placeholder="Nueva contraseña (dejar en blanco para no cambiar)" readonly>
+                        <label for="profilePassword" data-i18n="profile_password_label">Cambiar contraseña (opcional)</label>
+                        <input type="password" id="profilePassword" data-i18n-placeholder="profile_password_placeholder" placeholder="Nueva contraseña (dejar en blanco para no cambiar)" readonly>
                     </div>
 
                     <div id="profileMessage" class="profile-message"></div>
 
                     <div class="profile-actions">
-                        <button type="button" id="btnEditProfile" class="btn btn-primary">Editar</button>
-                        <button type="submit" id="btnSaveProfile" class="btn btn-primary" style="display:none;">Guardar cambios</button>
-                        <button type="button" id="btnCancelEdit" class="btn btn-secondary" style="display:none;">Cancelar</button>
+                        <button type="button" id="btnEditProfile" class="btn btn-primary" data-i18n="profile_edit_btn">Editar</button>
+                        <button type="submit" id="btnSaveProfile" class="btn btn-primary" style="display:none;" data-i18n="profile_save_btn">Guardar cambios</button>
+                        <button type="button" id="btnCancelEdit" class="btn btn-secondary" style="display:none;" data-i18n="profile_cancel_btn">Cancelar</button>
                     </div>
                 </form>
             </div>
@@ -134,9 +134,9 @@
             <div class="friends-left">
                 <div class="friends-header">
                     <div class="friends-tabs" role="tablist" aria-label="Amigos Tabs">
-                        <button type="button" class="friends-tab-btn active" data-tab="friends" role="tab" aria-selected="true">Amigos</button>
-                        <button type="button" class="friends-tab-btn" data-tab="add" role="tab" aria-selected="false">Añadir</button>
-                        <button type="button" class="friends-tab-btn" data-tab="online" role="tab" aria-selected="false">Online</button>
+                        <button type="button" class="friends-tab-btn active" data-tab="friends" role="tab" aria-selected="true" data-i18n="friends_tab_friends">Amigos</button>
+                        <button type="button" class="friends-tab-btn" data-tab="add" role="tab" aria-selected="false" data-i18n="friends_tab_add">Añadir</button>
+                        <button type="button" class="friends-tab-btn" data-tab="online" role="tab" aria-selected="false" data-i18n="friends_tab_online">Online</button>
                     </div>
                 </div>
 
@@ -147,9 +147,9 @@
 
                     <div id="panel-add" class="panel" role="tabpanel" aria-hidden="true">
                         <form id="addFriendForm" class="add-friend-panel">
-                            <label for="newFriendUsername">Nombre de usuario (username)</label>
-                            <input id="newFriendUsername" name="username" class="form-input" placeholder="Ej. Usuario123" required>
-                            <button type="submit" class="btn btn-primary btn-block">Añadir amigo</button>
+                            <label for="newFriendUsername" data-i18n="friends_add_label">Nombre de usuario (username)</label>
+                            <input id="newFriendUsername" name="username" class="form-input" data-i18n-placeholder="friends_add_placeholder" placeholder="Ej. Usuario123" required>
+                            <button type="submit" class="btn btn-primary btn-block" data-i18n="friends_add_button">Añadir amigo</button>
                             <div id="addFriendError" class="error-msg" aria-live="polite"></div>
                         </form>
                     </div>
@@ -160,11 +160,11 @@
                 </div>
             </div>
             <div class="chat-panel">
-                <div id="chatHeader" class="chat-header">Selecciona un amigo para chatear</div>
+                <div id="chatHeader" class="chat-header" data-i18n="friends_chat_header">Selecciona un amigo para chatear</div>
                 <div id="messages" class="messages" aria-live="polite"></div>
                 <div class="chat-input-row">
-                    <input id="chatInput" class="chat-input" placeholder="Escribe un mensaje...">
-                    <button id="chatSend" class="btn btn-primary">Enviar</button>
+                    <input id="chatInput" class="chat-input" data-i18n-placeholder="friends_chat_placeholder" placeholder="Escribe un mensaje...">
+                    <button id="chatSend" class="btn btn-primary" data-i18n="friends_chat_send">Enviar</button>
                 </div>
             </div>
             <button id="closeFriends" class="btn btn-ghost" aria-label="Cerrar">×</button>
@@ -174,18 +174,18 @@
     <!-- Popup Confirmar eliminación de amigo -->
     <div id="popupEliminarAmigo" class="popup">
         <div class="popup-content">
-            <p id="eliminarAmigoMsg">¿Eliminar a este amigo?</p>
-            <button id="confirmarEliminarAmigo" class="btn btn-primary">Sí, eliminar</button>
-            <button id="cancelarEliminarAmigo" class="btn btn-secondary">Cancelar</button>
+            <p id="eliminarAmigoMsg" data-i18n="friends_delete_msg">¿Eliminar a este amigo?</p>
+            <button id="confirmarEliminarAmigo" class="btn btn-primary" data-i18n="friends_delete_confirm">Sí, eliminar</button>
+            <button id="cancelarEliminarAmigo" class="btn btn-secondary" data-i18n="friends_delete_cancel">Cancelar</button>
         </div>
     </div>
 
     <!-- Popup cerrar sesión -->
             <div id="popupCerrarSesion" class="popup">
                 <div class="popup-content">
-                    <p>¿Estás seguro de que quieres cerrar sesión?</p>
-                    <button id="confirmarCerrar" class="btn btn-primary">Sí, cerrar sesión</button>
-                    <button id="cancelarCerrar" class="btn btn-secondary">Cancelar</button>
+                    <p data-i18n="logout_confirm_msg">¿Estás seguro de que quieres cerrar sesión?</p>
+                    <button id="confirmarCerrar" class="btn btn-primary" data-i18n="logout_confirm_btn">Sí, cerrar sesión</button>
+                    <button id="cancelarCerrar" class="btn btn-secondary" data-i18n="logout_cancel_btn">Cancelar</button>
                 </div>
             </div>
 
@@ -193,49 +193,52 @@
     <main class="contacto-main">
         <div class="contacto-container">
             <section class="contacto-hero">
-                <h1><i class="fas fa-envelope"></i> Contacta con Nosotros</h1>
-                <p>¿Tienes dudas, sugerencias o quieres colaborar? ¡Estamos aquí para ayudarte!</p>
+                <h1>
+                    <i class="fas fa-envelope"></i>
+                    <span data-i18n="contact_hero_title">Contacta con Nosotros</span>
+                </h1>
+                <p data-i18n="contact_hero_subtitle">¿Tienes dudas, sugerencias o quieres colaborar? ¡Estamos aquí para ayudarte!</p>
             </section>
 
             <div class="contacto-content">
                 <!-- FORMULARIO -->
                 <div class="contacto-card">
                     <div class="card-header">
-                        <h2>Formulario de Contacto</h2>
-                        <p>Envíanos tu mensaje y te responderemos lo antes posible</p>
+                        <h2 data-i18n="contact_form_title">Formulario de Contacto</h2>
+                        <p data-i18n="contact_form_subtitle">Envíanos tu mensaje y te responderemos lo antes posible</p>
                     </div>
 
                     <form id="contactoForm" class="contacto-form">
                         <div class="form-group">
                             <label for="nombre">
-                                <i class="fas fa-user"></i> Nombre *
+                                <i class="fas fa-user"></i> <span data-i18n="contact_form_name_label">Nombre *</span>
                             </label>
-                            <input type="text" id="nombre" name="nombre" class="form-input" placeholder="Tu nombre" required>
+                            <input type="text" id="nombre" name="nombre" class="form-input" data-i18n-placeholder="contact_form_name_placeholder" placeholder="Tu nombre" required>
                         </div>
 
                         <div class="form-group">
                             <label for="email">
-                                <i class="fas fa-envelope"></i> Email *
+                                <i class="fas fa-envelope"></i> <span data-i18n="contact_form_email_label">Email *</span>
                             </label>
-                            <input type="email" id="email" name="email" class="form-input" placeholder="tu@email.com" required>
+                            <input type="email" id="email" name="email" class="form-input" data-i18n-placeholder="contact_form_email_placeholder" placeholder="tu@email.com" required>
                         </div>
 
                         <div class="form-group">
                             <label for="asunto">
-                                <i class="fas fa-comment"></i> Asunto *
+                                <i class="fas fa-comment"></i> <span data-i18n="contact_form_subject_label">Asunto *</span>
                             </label>
-                            <input type="text" id="asunto" name="asunto" class="form-input" placeholder="Motivo de tu consulta" required>
+                            <input type="text" id="asunto" name="asunto" class="form-input" data-i18n-placeholder="contact_form_subject_placeholder" placeholder="Motivo de tu consulta" required>
                         </div>
 
                         <div class="form-group">
                             <label for="mensaje">
-                                <i class="fas fa-pencil-alt"></i> Mensaje *
+                                <i class="fas fa-pencil-alt"></i> <span data-i18n="contact_form_message_label">Mensaje *</span>
                             </label>
-                            <textarea id="mensaje" name="mensaje" class="form-input" rows="5" placeholder="Escribe tu mensaje..." required></textarea>
+                            <textarea id="mensaje" name="mensaje" class="form-input" rows="5" data-i18n-placeholder="contact_form_message_placeholder" placeholder="Escribe tu mensaje..." required></textarea>
                         </div>
 
                         <button type="submit" class="btn btn-primary btn-lg btn-block">
-                            <i class="fas fa-paper-plane"></i> Enviar mensaje
+                            <i class="fas fa-paper-plane"></i> <span data-i18n="contact_form_cta">Enviar mensaje</span>
                         </button>
 
                         <p id="mensajeForm" class="form-message"></p>
@@ -244,27 +247,27 @@
 
                 <!-- INFORMACIÓN + MAPA -->
                 <div class="contacto-info">
-                    <h3><i class="fas fa-map-marked-alt"></i> Información de Contacto</h3>
+                    <h3><i class="fas fa-map-marked-alt"></i> <span data-i18n="contact_info_title">Información de Contacto</span></h3>
                     <ul class="info-list">
                         <li>
                             <i class="fas fa-envelope"></i>                            
                             <div>                                
-                                <strong>Email:</strong> 
-                                <p>soporte@mochilerossinfronteras.com</p>
+                                <strong data-i18n="contact_info_email_label">Email:</strong> 
+                                <p data-i18n="contact_info_email_value">soporte@mochilerossinfronteras.com</p>
                             </div>
                         </li>
                         <li>
                             <i class="fas fa-phone"></i>
                             <div>                                
-                                <strong>Teléfono:</strong>
-                                <p>+34 600 123 456</p>
+                                <strong data-i18n="contact_info_phone_label">Teléfono:</strong>
+                                <p data-i18n="contact_info_phone_value">+34 600 123 456</p>
                             </div>
                         </li>
                         <li>
                             <i class="fas fa-location-dot"></i>
                             <div>                                
-                                <strong>Oficina:</strong>
-                                <p>Madrid, España</p>
+                                <strong data-i18n="contact_info_office_label">Oficina:</strong>
+                                <p data-i18n="contact_info_office_value">Madrid, España</p>
                             </div>                            
                         </li>
                     </ul>
@@ -317,7 +320,7 @@
                 <h4 data-i18n="footer_newsletter">Newsletter</h4>
                 <p data-i18n="footer_news_sub">Recibe nuestras últimas novedades</p>
                 <form class="newsletter-form">
-                    <input type="email" placeholder="Tu email" required>
+                    <input type="email" data-i18n-placeholder="newsletter_placeholder" placeholder="Tu email" required>
                     <button type="submit" class="btn btn-primary" data-i18n="footer_subscribe">Suscribirse</button>
                 </form>
             </div>
@@ -327,6 +330,7 @@
         </div>
     </footer>
 
+    <script src="script/i18n.js"></script>
     <script src="script/versionb.js"></script>
     <script src="script/nav.js"></script>
     <script src="script/friends.js"></script>
