--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
         <ul class="nav-menu">
             <li><a href="index.html" data-i18n="nav_home">Inicio</a></li>
             <li><a href="buscar-rutas.html" data-i18n="nav_routes">Rutas</a></li>
-            <li><a href="otros-rincones.html" data-i18n="nav_cities">Otros rincones</a></li>
+            <li><a href="otros-rincones.html" data-i18n="nav_cities">Ciudades</a></li>
             <li><a href="blog.html" data-i18n="nav_blog" class="active">Blog</a></li>
             <li><a href="comunidad.html" data-i18n="nav_community">Comunidad</a></li>
             <li><a href="contacto.html" data-i18n="nav_contact">Contacto</a></li>
