--- a/buscar-rutas.html
+++ b/buscar-rutas.html
@@ -24,7 +24,7 @@
         <ul class="nav-menu">
             <li><a href="index.html" data-i18n="nav_home">Inicio</a></li>
             <li><a href="buscar-rutas.html" class="active" data-i18n="nav_routes">Rutas</a></li>
-            <li><a href="otros-rincones.html" data-i18n="nav_cities">Otros rincones</a></li>
+            <li><a href="otros-rincones.html" data-i18n="nav_cities">Ciudades</a></li>
             <li><a href="blog.html" data-i18n="nav_blog">Blog</a></li>
             <li><a href="comunidad.html" data-i18n="nav_community">Comunidad</a></li>
             <li><a href="contacto.html" data-i18n="nav_contact">Contacto</a></li>
